--- a/helm-chart/kuberay-operator/values.yaml
+++ b/helm-chart/kuberay-operator/values.yaml
@@ -17,6 +17,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name: "kuberay-operator"
 
+scc:
+  annotations: {}
+
 service:
   type: ClusterIP
   port: 8080
